chore:add phpmyadmin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,16 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+
+    phpmyadmin:
+        image: 'phpmyadmin:latest'
+        ports:
+            - 8888:80
+        networks:
+            - sail
+        environment:
+            - PMA_ARBITRARY=1
+                  
 networks:
     sail:
         driver: bridge
